--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,23 +22,29 @@
         android:layout_height="50dp"
         android:entries="@array/genres" />
 
-    <Button
-        android:id="@+id/btnAddArtist"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:text="Add Artist"
-        android:layout_marginBottom="20dp"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Long Press Any Name To Update!"
-        android:textSize="18sp"
-        android:layout_marginBottom="20dp"
-        android:textColor="#000"/>
-    <ListView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="20dp"
-        android:id="@+id/listViewArtists"/>
+        android:layout_height="match_parent"
+        android:background="@drawable/background_layout_add_artist"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/btnAddArtist"
+            android:layout_marginTop="20dp"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="20dp"
+            android:text="Add Artist" />
+
+        <Button
+            android:id="@+id/btnViewArtist"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="20dp"
+            android:text="View Artist" />
+
+    </LinearLayout>
 
 </LinearLayout>
